--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <header class="header">
         <a href="" class="logo"><i class="fas fa-hiking"></i>Travel.</a>
         <nav class="nav-bar">
-            <a href="" class="nav-link">Home</a>
-            <a href="">About</a>
-            <a href="">Shop</a>
-            <a href="">Packages</a>
-            <a href="">Reviews</a>
-            <a href="">Blogs</a>
+            <a href="#home" class="nav-link">Home</a>
+            <a href="#about">About</a>
+            <a href="#shop">Shop</a>
+            <a href="#packages">Packages</a>
+            <a href="#reviews">Reviews</a>
+            <a href="#blogs">Blogs</a>
             <div class="nav-close fas fa-times" id="nav-close"></div>
         </nav>
         <div class="icons">
@@ -452,7 +452,7 @@
     <!--Package Section Ends-->
 
     <!--Service Section Start-->
-    <section class="services">
+    <section class="services" id="services">
         <h1 class="heading">What we offer</h1>
         <div class="box-container">
             <div class="box">
@@ -496,7 +496,7 @@
     <!--Service Section Start-->
 
     <!--blog section starts-->
-    <section class="blogs">
+    <section class="blogs" id="blogs">
         <h1 class="heading">our daily posts</h1>
         <div class="swiper blogs-slider">
             <div class="swiper-wrapper">
@@ -568,7 +568,7 @@
 
     <!--newsletter section starts-->
 
-    <section class="newsletter">
+    <section class="newsletter" id="newsletter">
         <div class="content">
             <h1 class="heading">subscribe now</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque mollitia, est officia ipsa itaque labore
@@ -584,7 +584,7 @@
     <!--newsletter section starts-->
 
     <!--clients section start-->
-    <section class="clients">
+    <section class="clients" id="clients">
         <div class="swiper clients-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide slide"><img src="./images/client-logo-1.png" alt=""></div>
